--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_REST_API=http://ec2-54-193-15-230.us-west-1.compute.amazonaws.com:8000/
+REACT_APP_REST_API=http://52.9.147.67:8000/
 REACT_APP_LOCAL_API=http://localhost:3000/
