--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_REST_API=http://52.9.147.67:8080/
 REACT_APP_LOCAL_API=http://localhost:3000/
+REACT_APP_DEVELOP_API_URL=http://localhost:8000/
