--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
+    "country-list": "^2.1.0",
     "enzyme-to-json": "^3.3.5",
     "log-to-file": "^1.3.0",
     "mdbreact": "^4.13.0",
@@ -20,10 +21,9 @@
     "react-calendar": "^2.18.1",
     "react-country-region-selector": "^1.4.3",
     "react-dom": "^16.7.0",
-    "react-dropdown": "^1.6.4",
     "react-facebook-login": "^4.1.1",
-    "react-horizontal-scrolling-menu": "^0.5.8",
     "react-flagkit": "^1.0.2",
+    "react-horizontal-scrolling-menu": "^0.5.8",
     "react-icons": "^2.2.7",
     "react-intl": "^2.8.0",
     "react-phone-number-input": "^2.3.11",
