--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.7.0",
+    "react-async-script-loader": "^0.3.0",
     "react-burger-menu": "^2.6.10",
     "react-calendar": "^2.18.1",
     "react-country-region-selector": "^1.4.3",
@@ -28,6 +29,7 @@
     "react-horizontal-scrolling-menu": "^0.5.8",
     "react-icons": "^2.2.7",
     "react-intl": "^2.8.0",
+    "react-paypal-button-v2": "^2.3.1",
     "react-phone-number-input": "^2.3.11",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
