--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-horizontal-scrolling-menu": "^0.5.8",
     "react-icons": "^2.2.7",
     "react-intl": "^2.8.0",
+    "react-paypal-button": "^3.0.1",
     "react-paypal-button-v2": "^2.3.1",
     "react-phone-number-input": "^2.3.11",
     "react-redux": "^6.0.0",
