--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
     "country-list": "^2.1.0",
+    "downshift": "^3.2.10",
     "enzyme-to-json": "^3.3.5",
     "log-to-file": "^1.3.0",
     "material-ui": "^1.0.0-beta.47",
