--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/polyfill": "^7.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.0.0-rc.0",
     "@sendgrid/mail": "^6.3.1",
     "antd": "^3.12.4",
     "axios": "^0.18.0",
