--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sendgrid/mail": "^6.3.1",
     "antd": "^3.12.4",
     "axios": "^0.18.0",
+    "chart.js": "^1.1.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
     "country-list": "^2.1.0",
@@ -18,11 +19,13 @@
     "log-to-file": "^1.3.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-async-script-loader": "^0.3.0",
     "react-burger-menu": "^2.6.10",
     "react-calendar": "^2.18.1",
+    "react-chartjs": "^1.2.0",
     "react-country-region-selector": "^1.4.3",
+    "react-dom": "^16.8.6",
     "react-facebook-login": "^4.1.1",
     "react-flagkit": "^1.0.2",
     "react-horizontal-scrolling-menu": "^0.5.8",
