--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "log-to-file": "^1.3.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-async-script-loader": "^0.3.0",
     "react-burger-menu": "^2.6.10",
