--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-flagkit": "^1.0.2",
     "react-horizontal-scrolling-menu": "^0.5.8",
     "react-icons": "^2.2.7",
+    "react-image-picker": "^1.1.1",
     "react-intl": "^2.8.0",
     "react-paypal-button": "^3.0.1",
     "react-paypal-button-v2": "^2.3.1",
