--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^2.2.7",
     "react-image-picker": "^1.1.1",
     "react-intl": "^2.8.0",
+    "react-number-format": "^4.0.8",
     "react-paypal-button": "^3.0.1",
     "react-paypal-button-v2": "^2.3.1",
     "react-phone-number-input": "^2.3.11",
