--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@sendgrid/mail": "^6.3.1",
     "antd": "^3.12.4",
     "axios": "^0.19.0",
-    "chart.js": "^1.1.1",
+    "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
     "country-list": "^2.1.0",
@@ -25,7 +25,7 @@
     "react-async-script-loader": "^0.3.0",
     "react-burger-menu": "^2.6.10",
     "react-calendar": "^2.18.1",
-    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^2.7.6",
     "react-country-region-selector": "^1.4.3",
     "react-dom": "^16.8.6",
     "react-facebook-login": "^4.1.1",
