--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-horizontal-scrolling-menu": "^0.5.8",
     "react-icons": "^2.2.7",
     "react-image-picker": "^1.1.1",
+    "react-input-mask": "^2.0.4",
     "react-intl": "^2.8.0",
     "react-number-format": "^4.0.8",
     "react-paypal-button": "^3.0.1",
