--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "jest": "*",
+    "prettier-eslint": "^9.0.0",
     "react-test-renderer": "*"
-  }
+  },
+  "lint": "eslint --fix . && echo 'Lint complete.'"
 }
