--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.0.4",
     "connected-react-router": "^6.3.1",
     "country-list": "^2.1.0",
+    "currency-symbol-map": "^4.0.4",
     "downshift": "^3.2.10",
     "enzyme-to-json": "^3.3.5",
     "log-to-file": "^1.3.0",
