--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "paymentiq-cashier-bootstrapper": "^1.0.10",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-async-script-loader": "^0.3.0",
