--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux-thunk": "^2.3.0",
     "sinon": "^7.3.2",
     "typeface-roboto": "0.0.54",
+    "uuid": "^3.3.3",
     "zxcvbn": "^4.4.2"
   },
   "scripts": {
