first draft of PIQ FRONT API integration with hard coded test-card values and PIQ FRONT API URL values

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,31 @@
 {
     "env": {
-      "browser": true,
-      "commonjs": true,
-      "es6": true,
-      "node": true
+        "browser": true,
+        // "commonjs": true,
+        "es6": true,
+        "node": true
     },
     "plugins": [
-      "react",
-      "react-hooks"
+        "react"
+        // "react-hooks"
     ],
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
+    "extends": [
+        // "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:prettier/recommended"
+    ],
     "parserOptions": {
-      "sourceType": "module",
-      "ecmaVersion": 2018
+        "sourceType": "module",
+        "ecmaVersion": 2018
     },
     "settings": {
-      "react": {
-        "version": "detect"
-      }
+        "react": {
+            "version": "detect"
+        }
     },
     "rules": {
-      "linebreak-style": ["error", "unix"],
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn"
+        "linebreak-style": ["error", "unix"],
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     }
-  }
+}
