--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 REACT_APP_REST_API=http://52.9.147.67:8080/
 REACT_APP_LOCAL_API=http://localhost:3000/
 REACT_APP_DEVELOP_API_URL=http://localhost:8000/
+REACT_APP_PIQ_API_URL=https://test-api.paymentiq.io/paymentiq/
+REACT_APP_PIQ_MID=100185999
 SKIP_PREFLIGHT_CHECK=true
