--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "currency-symbol-map": "^4.0.4",
     "downshift": "^3.2.10",
     "enzyme-to-json": "^3.3.5",
+    "linq": "^3.2.0",
     "log-to-file": "^1.3.0",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
