dummy rewards added

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-smooth-marquee": "^1.0.0",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^7.1.0",
+    "recharts": "^1.7.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sinon": "^7.3.2",
