--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "react-image-picker": "^1.1.1",
     "react-input-mask": "^2.0.4",
     "react-intl": "^2.8.0",
+    "react-motion": "^0.5.2",
     "react-number-format": "^4.0.8",
     "react-paypal-button": "^3.0.1",
     "react-paypal-button-v2": "^2.3.1",
     "react-phone-input-2": "^2.9.5",
     "react-phone-number-input": "^2.3.11",
+    "react-radial-progress-motion": "^1.0.18",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^2.1.8",
