--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "reactstrap": "^7.1.0",
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
+        "sha256": "^0.2.0",
         "sinon": "^7.3.2",
         "typeface-roboto": "0.0.54",
         "uuid": "^3.3.3",
