--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
         "react-dom": "^16.8.6",
         "react-facebook-login": "^4.1.1",
         "react-flagkit": "^1.0.2",
+        "react-frame-component": "^4.1.1",
         "react-horizontal-scrolling-menu": "^0.5.8",
         "react-icons": "^2.2.7",
+        "react-iframe": "^1.8.0",
         "react-image-picker": "^1.1.1",
         "react-input-mask": "^2.0.4",
         "react-intl": "^2.8.0",
