--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-flagkit": "^1.0.2",
         "react-horizontal-scrolling-menu": "^0.5.8",
         "react-icons": "^2.2.7",
+        "react-iframe": "^1.8.0",
         "react-image-picker": "^1.1.1",
         "react-input-mask": "^2.0.4",
         "react-intl": "^2.8.0",
