--- a/package.json
+++ b/package.json
@@ -3,59 +3,58 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/polyfill": "^7.0.0",
-        "@material-ui/core": "^4.4.2",
+        "@babel/polyfill": "^7.7.0",
+        "@material-ui/core": "^4.7.0",
         "@material-ui/icons": "^3.0.2",
-        "@material-ui/styles": "^4.3.3",
+        "@material-ui/styles": "^4.6.0",
         "@sendgrid/mail": "^6.3.1",
-        "antd": "^3.12.4",
+        "antd": "^3.25.3",
         "axios": "^0.19.0",
-        "chart.js": "^2.8.0",
+        "chart.js": "^2.9.3",
         "classnames": "^2.2.6",
         "clsx": "^1.0.4",
-        "connected-react-router": "^6.3.1",
-        "country-list": "^2.1.0",
+        "connected-react-router": "^6.6.1",
+        "country-list": "^2.2.0",
         "currency-symbol-map": "^4.0.4",
-        "downshift": "^3.2.10",
-        "enzyme-to-json": "^3.3.5",
+        "downshift": "^3.4.2",
+        "enzyme-to-json": "^3.4.3",
         "jsencrypt": "^3.0.0-rc.1",
-        "linq": "^3.2.0",
+        "linq": "^3.2.1",
         "log-to-file": "^1.3.0",
         "md5": "^2.2.1",
         "moment": "^2.24.0",
-        "node-sass": "^4.12.0",
-        "paymentiq-cashier-bootstrapper": "^1.0.10",
+        "node-sass": "^4.13.0",
+        "paymentiq-cashier-bootstrapper": "^1.0.14",
         "qrcode.react": "^0.9.3",
-        "react": "^16.8.6",
+        "react": "^16.12.0",
         "react-async-script-loader": "^0.3.0",
-        "react-burger-menu": "^2.6.10",
-        "react-calendar": "^2.18.1",
-        "react-chartjs-2": "^2.7.6",
-        "react-circular-progressbar": "^2.0.2",
-        "react-country-region-selector": "^1.4.3",
-        "react-dom": "^16.8.6",
+        "react-burger-menu": "^2.6.12",
+        "react-calendar": "^2.19.2",
+        "react-chartjs-2": "^2.8.0",
+        "react-circular-progressbar": "^2.0.3",
+        "react-country-region-selector": "^1.4.5",
+        "react-dom": "^16.12.0",
         "react-facebook-login": "^4.1.1",
         "react-flagkit": "^1.0.2",
-        "react-horizontal-scrolling-menu": "^0.5.8",
+        "react-horizontal-scrolling-menu": "^0.5.91",
         "react-icons": "^2.2.7",
         "react-image-picker": "^1.1.1",
         "react-input-mask": "^2.0.4",
         "react-intl": "^2.8.0",
-        "react-number-format": "^4.0.8",
+        "react-number-format": "^4.3.1",
         "react-paypal-button": "^3.0.1",
-        "react-paypal-button-v2": "^2.3.1",
-        "react-phone-input-2": "^2.9.5",
-        "react-phone-number-input": "^2.3.11",
+        "react-paypal-button-v2": "^2.6.0",
+        "react-phone-input-2": "^2.10.1",
+        "react-phone-number-input": "^2.4.1",
         "react-redux": "^6.0.0",
-        "react-router-dom": "^5.0.1",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "^2.1.8",
-        "react-select": "^2.4.1",
+        "react-select": "^2.4.4",
         "react-smooth-marquee": "^1.0.0",
-        "react-test-renderer": "^16.8.6",
         "reactstrap": "^7.1.0",
-        "redux": "^4.0.1",
+        "redux": "^4.0.4",
         "redux-thunk": "^2.3.0",
-        "sinon": "^7.3.2",
+        "sinon": "^7.5.0",
         "typeface-roboto": "0.0.54",
         "uuid": "^3.3.3",
         "zxcvbn": "^4.4.2"
@@ -77,22 +76,22 @@
         "not op_mini all"
     ],
     "devDependencies": {
-        "@babel/core": "*",
-        "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-        "@babel/preset-env": "*",
-        "@babel/preset-react": "*",
-        "babel-jest": "*",
-        "enzyme": "^3.9.0",
-        "enzyme-adapter-react-16": "^1.11.2",
-        "eslint": "^6.3.0",
-        "eslint-config-prettier": "^6.2.0",
-        "eslint-plugin-prettier": "^3.1.0",
-        "eslint-plugin-react": "^7.14.3",
-        "eslint-plugin-react-hooks": "^2.0.1",
-        "jest": "*",
-        "prettier": "^1.18.2",
-        "prettier-eslint": "^9.0.0",
-        "react-test-renderer": "*"
+        "@babel/core": "^7.7.4",
+        "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+        "@babel/preset-env": "^7.7.4",
+        "@babel/preset-react": "^7.7.4",
+        "babel-jest": "^24.9.0",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.15.1",
+        "eslint": "^6.7.1",
+        "eslint-config-prettier": "^6.7.0",
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "^7.16.0",
+        "eslint-plugin-react-hooks": "^2.3.0",
+        "jest": "^24.9.0",
+        "prettier": "^1.19.1",
+        "prettier-eslint": "^9.0.1",
+        "react-test-renderer": "^16.12.0"
     },
     "lint": "eslint --fix . && echo 'Lint complete.'"
 }
