--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "private": true,
     "dependencies": {
         "@babel/polyfill": "^7.7.0",
+        "@date-io/date-fns": "^1.3.13",
         "@material-ui/core": "^4.7.1",
         "@material-ui/icons": "^4.5.1",
+        "@material-ui/pickers": "^3.2.8",
         "@material-ui/styles": "^4.7.1",
         "@sendgrid/mail": "^6.3.1",
         "antd": "^3.26.0",
@@ -16,6 +18,7 @@
         "connected-react-router": "^6.6.1",
         "country-list": "^2.2.0",
         "currency-symbol-map": "^4.0.4",
+        "date-fns": "^2.0.0-beta.5",
         "downshift": "^3.4.5",
         "enzyme-to-json": "^3.4.3",
         "jsencrypt": "^3.0.0-rc.1",
