--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@babel/polyfill": "^7.7.0",
         "@material-ui/core": "^4.7.1",
         "@material-ui/icons": "^4.5.1",
+        "@material-ui/lab": "^4.0.0-alpha.36",
         "@material-ui/styles": "^4.7.1",
         "@sendgrid/mail": "^6.3.1",
         "antd": "^3.26.0",
