--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-scripts": "^2.1.8",
         "reactstrap": "^7.1.0",
         "redux": "^4.0.4",
+        "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
         "sha256": "^0.2.0",
         "sinon": "^7.5.0",
