navbar is updated when the page is refreshed

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "downshift": "^3.4.5",
         "enzyme-to-json": "^3.4.3",
         "jsencrypt": "^3.0.0-rc.1",
+        "lodash": "^4.17.15",
         "md5": "^2.2.1",
         "moment": "^2.24.0",
         "node-sass": "^4.13.0",
@@ -51,6 +52,7 @@
         "react-scripts": "^2.1.8",
         "reactstrap": "^7.1.0",
         "redux": "^4.0.4",
+        "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
         "sha256": "^0.2.0",
         "sinon": "^7.5.0",
