--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.3.0",
         "react-slick": "^0.25.2",
+        "react-slideshow-image": "^1.3.3",
         "reactstrap": "^7.1.0",
         "redux": "^4.0.4",
         "redux-logger": "^3.0.6",
