--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "paymentiq-cashier-bootstrapper": "^1.0.14",
         "prop-types": "^15.7.2",
         "qrcode.react": "^0.9.3",
+        "query-string": "^6.10.1",
         "randomcolor": "^0.5.4",
         "react": "^16.12.0",
         "react-async-script-loader": "^0.3.0",
