--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
         "randomcolor": "^0.5.4",
         "react": "^16.12.0",
         "react-async-script-loader": "^0.3.0",
-        "react-burger-menu": "^2.6.13",
         "react-calendar": "^2.19.2",
         "react-chartjs-2": "^2.8.0",
         "react-circular-progressbar": "^2.0.3",
@@ -44,13 +43,13 @@
         "react-facebook-login": "^4.1.1",
         "react-flagkit": "^1.0.2",
         "react-frame-component": "^4.1.1",
+        "react-horizontal-scrolling-menu": "^0.7.5",
         "react-icons": "^2.2.7",
         "react-iframe": "^1.8.0",
         "react-image-picker": "^1.1.1",
         "react-input-mask": "^2.0.4",
         "react-intl": "^2.8.0",
         "react-minimal-pie-chart": "^6.0.0",
-        "react-modal": "^3.11.1",
         "react-moment": "^0.9.7",
         "react-number-format": "^4.3.1",
         "react-phone-number-input": "^2.5.1",
@@ -59,14 +58,12 @@
         "react-scripts": "^3.3.0",
         "react-slick": "^0.25.2",
         "react-slideshow-image": "^1.3.3",
-        "reactstrap": "^7.1.0",
         "redux": "^4.0.4",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
         "sha256": "^0.2.0",
         "sinon": "^7.5.0",
         "slick-carousel": "^1.8.1",
-        "typeface-roboto": "0.0.54",
         "uuid": "^3.3.3",
         "webpack": "^4.41.2",
         "zxcvbn": "^4.4.2"
