--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,5 @@ REACT_APP_GDCASINO_STAGING_CODE=IBPHtest
 REACT_APP_GDCASINO_STAGING_ACCESSKEY=f66e9c36-22a0-4f0a-9521-c8d3ca4f021a
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_NODE_ENV = development
+
+GENERATE_SOURCEMAP=false
