--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "reactstrap": "^7.1.0",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "sha256": "^0.2.0",
         "sinon": "^7.5.0",
